--- a/Tételek/ORG/Irodalom/README.org
+++ b/Tételek/ORG/Irodalom/README.org
@@ -1,10 +1,10 @@
 * Irodalom tételek .org formátumban
-- [[12_Juhasz_Gyula_Liraja.org][]]
-- [[13_Radnoti_Miklos_Eklogakolteszete.org][]]
-- [[14_Kanyadi_Sandor_Kolteszete.org][]]
-- [[15_Toth_Krisztina_Novellisztikaja.org][]]
-- [[16_A_Francia_Szimbolista_Lira.org][]]
-- [[17_Az_Orosz_Romantika_Es_Realizmus_Hataran-Gogol.org][]]
-- [[18_Az_Angol_Reneszansz_Drama.org][]]
-- [[19_Madach_Imre_Az_ember_tragediaja.org][]]
-- [[20_Az_Irodalom_Hatarteruletei_Magyar_nepmesek.org][]]
+- [[12_Juhasz_Gyula_Liraja.org][12_Juhasz_Gyula_Liraja.org]]
+- [[13_Radnoti_Miklos_Eklogakolteszete.org][13_Radnoti_Miklos_Eklogakolteszete.org]]
+- [[14_Kanyadi_Sandor_Kolteszete.org][14_Kanyadi_Sandor_Kolteszete.org]]
+- [[15_Toth_Krisztina_Novellisztikaja.org][15_Toth_Krisztina_Novellisztikaja.org]]
+- [[16_A_Francia_Szimbolista_Lira.org][16_A_Francia_Szimbolista_Lira.org]]
+- [[17_Az_Orosz_Romantika_Es_Realizmus_Hataran-Gogol.org][17_Az_Orosz_Romantika_Es_Realizmus_Hataran-Gogol.org]]
+- [[18_Az_Angol_Reneszansz_Drama.org][18_Az_Angol_Reneszansz_Drama.org]]
+- [[19_Madach_Imre_Az_ember_tragediaja.org][19_Madach_Imre_Az_ember_tragediaja.org]]
+- [[20_Az_Irodalom_Hatarteruletei_Magyar_nepmesek.org][20_Az_Irodalom_Hatarteruletei_Magyar_nepmesek.org]]
