--- a/Tételek/ORG/Irodalom/README.org
+++ b/Tételek/ORG/Irodalom/README.org
@@ -1,14 +1,14 @@
 * Irodalom tételek .org formátumban
-- [[1_tetel_Ady_Endre_Leda_tetel.docx][1_tetel_Ady_Endre_Leda_tetel.docx]]
-- [[2_tetel_AranyJános_Balladaköltészete.docx][2_tetel_AranyJános_Balladaköltészete.docx]]
-- [[3_tetel_Babits_Profetai_Kuldetestudat.docx][3_tetel_Babits_Profetai_Kuldetestudat.docx]]
-- [[4_tetel_Herczeg_Ferenc_kisepika.docx][4_tetel_Herczeg_Ferenc_kisepika.docx]]
-- [[5_tetelJokai_tetel_romantika_realizmus.docx][5_tetelJokai_tetel_romantika_realizmus.docx]]
-- [[6_tetel_Jozsef_Attila_szerelmi_kolteszete.docx][6_tetel_Jozsef_Attila_szerelmi_kolteszete.docx]]
-- [[7_tetel_Kosztolanyi_prozai_tetel.docx][7_tetel_Kosztolanyi_prozai_tetel.docx]]
-- [[8_tetel_Mikszath_Kalman_novellisztikaja.docx][8_tetel_Mikszath_Kalman_novellisztikaja.docx]]
-- [[9_tetel_Petofi_hitvesi_koltészet.docx][9_tetel_Petofi_hitvesi_koltészet.docx]]
-- [[10_tetel_Csokonai_Lilla_versek.docx][10_tetel_Csokonai_Lilla_versek.docx]]
+- [[1_tetel_Ady_Endre_Leda_tetel.org][1_tetel_Ady_Endre_Leda_tetel.org]]
+- [[2_tetel_AranyJános_Balladaköltészete.org][2_tetel_AranyJános_Balladaköltészete.org]]
+- [[3_tetel_Babits_Profetai_Kuldetestudat.org][3_tetel_Babits_Profetai_Kuldetestudat.org]]
+- [[4_tetel_Herczeg_Ferenc_kisepika.org][4_tetel_Herczeg_Ferenc_kisepika.org]]
+- [[5_tetelJokai_tetel_romantika_realizmus.org][5_tetelJokai_tetel_romantika_realizmus.org]]
+- [[6_tetel_Jozsef_Attila_szerelmi_kolteszete.org][6_tetel_Jozsef_Attila_szerelmi_kolteszete.org]]
+- [[7_tetel_Kosztolanyi_prozai_tetel.org][7_tetel_Kosztolanyi_prozai_tetel.org]]
+- [[8_tetel_Mikszath_Kalman_novellisztikaja.org][8_tetel_Mikszath_Kalman_novellisztikaja.org]]
+- [[9_tetel_Petofi_hitvesi_koltészet.org][9_tetel_Petofi_hitvesi_koltészet.org]]
+- [[10_tetel_Csokonai_Lilla_versek.org][10_tetel_Csokonai_Lilla_versek.org]]
 - [[12_Juhasz_Gyula_Liraja.org][12_Juhasz_Gyula_Liraja.org]]
 - [[13_Radnoti_Miklos_Eklogakolteszete.org][13_Radnoti_Miklos_Eklogakolteszete.org]]
 - [[14_Kanyadi_Sandor_Kolteszete.org][14_Kanyadi_Sandor_Kolteszete.org]]
