Update 2_Arany János Balladaköltészete.org

--- a/Tételek/ORG/Irodalom/2_Arany János Balladaköltészete.org
+++ b/Tételek/ORG/Irodalom/2_Arany János Balladaköltészete.org
@@ -9,7 +9,7 @@ visszavonulva a történelmi múltba menekült.\\
 - Ő a magyar balladaköltészet legjelentősebb mestere, balladái a magyar
 romantika sajátos válfaját képviselik.\\
 \\
-2. A ballada műfaji jellemzői Aranynál\\
+2. * A ballada műfaji jellemzői Aranynál\\
 - A ballada epikus, lírai és drámai elemeket vegyítő műfaj.\\
 - Jellemző a sűrítés, balladai homály, töredékesség, párbeszédes forma,
 lélektani mélység.\\
