--- a/Tételek/ORG/Nyelvtan/README.org
+++ b/Tételek/ORG/Nyelvtan/README.org
@@ -1,9 +1,9 @@
 * Nyelvtan tételek
-- [[1_Kommunikáció.org][1_Kommunikáció.org]] 
-- [[2_A magyar nyelv története.org][2_A magyar nyelv története.org]]
-- [[3_tetel_Ember_es_nyelvhasznalat.org][3_tetel_Ember_es_nyelvhasznalat.org]]
-- [[4_tétel A_nyelvi_rendszer_tetel.org][4_tétel A_nyelvi_rendszer_tetel.org]]
-- [[5_tétel A szöveg.org][5_tétel A szöveg.org]]
-- [[6_Retorika_alapjai_tetel.org][6_Retorika_alapjai_tetel.org]]
-- [[7_tetel_stilus_es_jelentes.org][7_tetel_stilus_es_jelentes.org]]
-- [[8_tetel_digitalis_kommunikacio.org][8_tetel_digitalis_kommunikacio.org]]
+[[1_Kommunikacio.org][1. Kommunikacio.org]]
+[[2_A magyar_nyelv_tortenete.org][2. A magyar_nyelv_tortenete.org]]
+[[3_tetel_Ember_es_nyelvhasznalat.org][3. tetel_Ember_es_nyelvhasznalat.org]]
+[[4_A_nyelvi_rendszer_tetel.org][4. A_nyelvi_rendszer_tetel.org]]
+[[5_A_szoveg.org][5. A_szoveg.org]]
+[[6_Retorika_alapjai.org][6. Retorika_alapjai.org]]
+[[7_Stilus_es_jelentes.org][7. Stilus_es_jelentes.org]]
+[[8_Digitalis_kommunikacio.org][8. Digitalis_kommunikacio.org]]
