--- a/Tételek/ORG/Nyelvtan/2_A magyar_nyelv_tortenete.org
+++ b/Tételek/ORG/Nyelvtan/2_A magyar_nyelv_tortenete.org
@@ -6,85 +6,85 @@
 
 *Ősmagyar kor (Kr. e. 1000 -- Kr. u. 896)*
 
-- A magyar nyelv önállósulása a finnugor alapnyelvből.
+- A magyar nyelv önállósulása a *finnugor* alapnyelvből.
 
-- Szókincs: természetre, családra, vadászatra utaló szavak.
+- Szókincs: *természetre*, *családra*, *vadászatra* utaló szavak.
 
-- Bolgár-török jövevényszavak (pl. „tál”, „szék”).
+- Bolgár-török *jövevényszavak* (pl. „tál”, „szék”).
 
 *Ómagyar kor (896 -- 1526)*
 
-- A honfoglalás után kialakuló magyar nyelv.
+- A *honfoglalás* után kialakuló magyar nyelv.
 
 - A legrégebbi írásos emlékek ideje.
 
-- Erős hatás a latin nyelvtől.
+- Erős *hatás a latin nyelvtől.*
 
 *Középmagyar kor (1526 -- 1772)*
 
-- Török hódoltság ideje, német és török jövevényszavak.
+- *Török hódoltság* ideje, *német és török* jövevényszavak.
 
-- Megjelenik a magyar nyelvű szépirodalom (pl. Zrínyi, Pázmány).
+- Megjelenik a *magyar nyelvű szépirodalom (pl. Zrínyi, Pázmány).*
 
-- A nyelv fokozatosan távolodik a középkori formáktól.
+- A nyelv *fokozatosan távolodik a középkori formáktól.*
 
 *Újmagyar kor (1772 -- 1920)*
 
-- A nyelvújítás kora.
+- A *nyelvújítás* kora. *(Kazinczy Ferenc, fő célja volt hogy modernizálja a magyar szókincset.)*
 
-- Szókincs gazdagítása, a nyelv tudatos formálása.
+- *Szókincs gazdagítása*, a nyelv tudatos formálása.
 
-- Magyar válik hivatalos nyelvvé (1844).
+- Magyar válik hivatalos nyelvvé *(1844)*.
 
 *Modern magyar kor (1920 -- napjainkig)*
 
-- A köznyelv egységesülése.
+- A *köznyelv egységesülése*.
 
-- A média, tudomány és technika hatása.
+- A *média*, *tudomány és technika hatása.*
 
-- Angol eredetű jövevényszavak terjedése.
+- *Angol eredetű jövevényszavak terjedése.*
 
 *Jövőbeli változások*
 
-- Digitalizáció, globalizáció hatása a nyelvre.
+- *Digitalizáció, globalizáció hatása* a nyelvre.
 
-- Élő nyelvként folyamatos változásban van.
+- Élő nyelvként *folyamatos változásban* van.
 
 *2. A nyelvtörténet forrásai: kézírásos és nyomtatott nyelvemlékek*
 
-Nyelvemlékek: a nyelv korábbi állapotát tükröző írásos források.
+Nyelvemlékek: a nyelv* korábbi állapotát* tükröző írásos források.
 
 *Kézírásos nyelvemlékek*
 
-- Halotti beszéd és könyörgés (1192-1195): legrégebbi fennmaradt magyar
-szöveg.
+- Halotti beszéd és könyörgés (1192-1195): *legrégebbi* fennmaradt *magyar
+szöveg.*
 
-- Ómagyar Mária-siralom (1300 körül): legrégebbi magyar vers.
+- Ómagyar Mária-siralom (1300 körül): *legrégebbi magyar vers.*
 
 - Jókai-kódex, Müncheni kódex: vallásos szövegek, fordítások.
 
 *Nyomtatott nyelvemlékek*
 
-- Heltai Gáspár krónikái és bibliafordítása (16. század).
+- Heltai Gáspár krónikái és *bibliafordítása (16. század).*
 
 - Sylvester János Újszövetség-fordítása (1541): első nyomtatott magyar
 Újszövetség.
 
-- Vizsolyi Biblia (1590): első teljes magyar bibliafordítás
-nyomtatásban.
+- Vizsolyi János féle Biblia (1590): *első teljes magyar bibliafordítás
+nyomtatásban.*
 
 *3. Nyelvújítás lényege és jelentősége példák alapján*
 
-Nyelvújítás (18--19. század): tudatos nyelvfejlesztési mozgalom, melynek
-célja a magyar nyelv gazdagítása, modernizálása volt.
+*Nyelvújítás* (18--19. század): tudatos *nyelvfejlesztési mozgalom*, melynek
+célja a *magyar nyelv gazdagítása, modernizálása* volt.
 
 *Okai*
 
-- Tudományos és technikai fejlődéshez nem volt elegendő szókincs.
+- Tudományos és technikai fejlődéshez *nem volt elegendő szókincs.*
 
-- A nemzeti identitás erősítése.
+- A *nemzeti identitás* erősítése.
 
-- A magyar nyelv hivatalos státuszának megerősítése.
+- A *magyar nyelv hivatalos státuszának megerősítése.*
 
 *Vezéralakok*
 
@@ -96,22 +96,22 @@ célja a magyar nyelv gazdagítása, modernizálása volt.
 
 - Régi magyar szavak felelevenítése.
 
-- Új szavak alkotása (szóösszetétel, szóképzés).
+- *Új szavak alkotása (szóösszetétel, szóképzés).*
 
-- Idegen szavak helyettesítése magyar megfelelőkkel.
+- *Idegen szavak helyettesítése magyar megfelelőkkel.*
 
 *Eredmények, példák*
 
 - Új szavak: „szabadság”, „eszme”, „csarnok”, „könyvtár”, „gépezet”.
 
-- Tudományos és irodalmi nyelv megújulása.
+- *Tudományos és irodalmi nyelv megújulása.*
 
-- A magyar vált a hivatalos államnyelvvé (1844).
+- A magyar vált a *hivatalos államnyelvvé (1844).*
 
 *Jelentősége*
 
-- Megteremtette a modern magyar irodalmi és tudományos nyelvet.
+- *Megteremtette* a *modern magyar irodalmi és tudományos nyelvet.*
 
-- Hozzájárult a nemzeti öntudat és kultúra erősödéséhez.
+- Hozzájárult a *nemzeti öntudat és kultúra erősödéséhez.*
 
-- Lehetővé tette, hogy a magyar nyelv a modern világban is helytálljon.
+- Lehetővé tette, hogy a *magyar nyelv a modern világban is helytálljon.*
